# toyota_project

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
toyota_project/: __init__.py  assets.py  definitions.py
toyota_project/notebook/: toyota.ipynb
toyota_project/notebooks/: analisis.ipynb  lasso.ipynb  ridge.ipynb  toyota.ipynb  toyota_l.ipynb  toyota_m.ipynb
